--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html style="--tg-viewport-height: 100vh; --tg-viewport-stable-height: 100vh;"><head>
     <title>Hello from Ktor!</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style data-emotion="css" data-s=""></style>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+  <style data-emotion="css" data-s="">
+      background: white;
+  </style>
   <body cz-shortcut-listen="true">
     <div id="root"></div>
     <script src="test_web.js"></script>
