--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello from Ktor!</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-  <style data-emotion="css" data-s="">
+  <style>
       background: white;
   </style>
   <body cz-shortcut-listen="true">
