--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
   <style>
-      background: white;
+      html{background: white;}  
   </style>
   <body cz-shortcut-listen="true">
     <div id="root"></div>
